[gd_scene load_steps=18 format=3 uid="uid://blkmwtbv1vml8"]

[ext_resource type="Script" path="res://Data/OptionsMenuScript.gd" id="1_jsaba"]
[ext_resource type="Texture2D" uid="uid://l7hks8le1o64" path="res://Icons/Menu/Title.png" id="1_ywnae"]
[ext_resource type="FontFile" uid="uid://cceis1op8xuls" path="res://Verdana-Bold.ttf" id="2_blqgh"]
[ext_resource type="Texture2D" uid="uid://cax1sac58s4bv" path="res://Icons/Menu/Background.png" id="3_tbg66"]
[ext_resource type="Texture2D" uid="uid://bqqgg7ndi6so1" path="res://Icons/Menu/emptyButton.png" id="4_tui17"]
[ext_resource type="Texture2D" uid="uid://tjmeghtnxuuc" path="res://Icons/Menu/emptyButtonDown.png" id="5_ave3r"]
[ext_resource type="Texture2D" uid="uid://ujqrh5v4qfpi" path="res://Icons/Menu/emptyButtonHower.png" id="6_lhths"]
[ext_resource type="Texture2D" uid="uid://cddwh18nqwpun" path="res://Icons/Menu/backButton.png" id="7_pni8y"]
[ext_resource type="Texture2D" uid="uid://dhab4q7s4ogea" path="res://Icons/Menu/backButtonDown.png" id="8_foyt7"]
[ext_resource type="Texture2D" uid="uid://qe0ri6bc8bhc" path="res://Icons/Menu/backButtonHower.png" id="9_05qgx"]
[ext_resource type="PackedScene" uid="uid://brcuq1nxojayu" path="res://Data/DifficultMenu.tscn" id="11_w0j38"]
[ext_resource type="PackedScene" uid="uid://bwlyu6mdyswb8" path="res://Data/LanguageMenuScene.tscn" id="12_vog5t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8k8qw"]
texture = ExtResource("1_ywnae")

[sub_resource type="LabelSettings" id="LabelSettings_w7cay"]
font = ExtResource("2_blqgh")
font_size = 50
font_color = Color(1, 0.545098, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kkcf7"]
texture = ExtResource("3_tbg66")

[sub_resource type="LabelSettings" id="LabelSettings_bldvj"]
font = ExtResource("2_blqgh")
font_size = 35
font_color = Color(0.898039, 0.984314, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0roma"]
font = ExtResource("2_blqgh")
font_size = 25
font_color = Color(0.898039, 0.984314, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jsaba")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -197.0
offset_right = 171.5
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Options"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8k8qw")

[node name="Label" type="Label" parent="Options/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "OPTIONS"
label_settings = SubResource("LabelSettings_w7cay")

[node name="PanelContainer2" type="PanelContainer" parent="Options"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kkcf7")

[node name="MarginContainer" type="MarginContainer" parent="Options/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Options/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DifficultButton" type="TextureButton" parent="Options/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_tui17")
texture_pressed = ExtResource("5_ave3r")
texture_hover = ExtResource("6_lhths")

[node name="Label" type="Label" parent="Options/PanelContainer2/MarginContainer/VBoxContainer/DifficultButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "DIFFICULT"
label_settings = SubResource("LabelSettings_bldvj")

[node name="LanguageMenu" type="TextureButton" parent="Options/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_tui17")
texture_pressed = ExtResource("5_ave3r")
texture_hover = ExtResource("6_lhths")

[node name="Label" type="Label" parent="Options/PanelContainer2/MarginContainer/VBoxContainer/LanguageMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "LANGUAGE"
label_settings = SubResource("LabelSettings_bldvj")

[node name="BackButton" type="TextureButton" parent="Options/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("7_pni8y")
texture_pressed = ExtResource("8_foyt7")
texture_hover = ExtResource("9_05qgx")

[node name="Label" type="Label" parent="Options/PanelContainer2/MarginContainer/VBoxContainer/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = SubResource("LabelSettings_0roma")

[node name="DifficultMenu" parent="." instance=ExtResource("11_w0j38")]
visible = false
layout_mode = 1

[node name="LanguageMenu" parent="." instance=ExtResource("12_vog5t")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Options/PanelContainer2/MarginContainer/VBoxContainer/DifficultButton" to="." method="_on_difficult_button_pressed"]
[connection signal="pressed" from="Options/PanelContainer2/MarginContainer/VBoxContainer/LanguageMenu" to="." method="_on_language_menu_pressed"]
[connection signal="pressed" from="Options/PanelContainer2/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
